[tool.poetry]
name = "data-visualization"
version = "0.1.0"
description = ""
authors = ["malakkhasawneh2 <malakkhasawneh2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
pandas = "^1.3.4"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
